# mrnet

./: .gitignore  README.md  imgtest.py  mkdocs.yml  period.py  pyproject.toml  requirements.txt  requirements_linux.txt  stochastics_tests.py  utils.py
configs/: config_1d_m_net.yml  config_3d_m_net.yml  config_base_l_net.yml  config_base_m_net.yml  config_kodak_m_net.yml  config_kodak_m_net_capacity.yml  config_kodak_siren.yml  config_poisson_disc.yml  config_textures_l_net.yml  config_textures_m_net.yml  config_textures_m_net_color.yml  image.yml  template.yml
configs/siggraph_asia/: config_frequency_analysis.yml  config_master.yml  config_siggraph_imgs.yml  config_siggraph_imgs_rgb.yml  config_siggraph_masked.yml  config_siggraph_mirror.yml  config_siggraph_siren.yml  config_siren.yml  config_solid_texture.yml
configs/tests/: image.yml  (+1 more)
devel/: my_test.py  utils.py
docs/: developer.md  docs.md  index.html  index.md  installation.md  usage.md
mrnet/: eval-net.ipynb  exp.ipynb  frequency_analysis.py  masked.py  siren_comparison.py  train-eval.ipynb  train-img.ipynb  train-siren.ipynb  train3d.ipynb
poisson_cache/: poisson_radius_0.0039215686.npy
src/: dataset_eval.py  eval-net.ipynb  eval3d.ipynb  exp.ipynb  frequency_analysis.py  l-net.ipynb  m-net.ipynb  parameters_search.py  train-eval.ipynb  train-img.ipynb  train-siren.ipynb  train-wb.ipynb  train1d.ipynb  train3d.ipynb  wb_traineval.py
tests/: example_image.py  imgtest.py  sift_tests.py  signal1d.py  stochastics_tests.py  test_image.py  test_viz.py  test_volume.py
tst/: helper.py  imgtest.py
(+63 files in other folders)
